# Research

./: .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  Research_Master.md  learnings.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  requirements.txt  research-prompt.md  research-review-prompt.md  synthesis-prompt.md
.claude/: CLAUDE.md  settings.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  mcp.json
Knowledge/: 2026-05-05-ai-use-case-classification.md  2026-05-05-enterprise-ai-capability-stack.md  2026-05-12-regulated-ai-constraint-shift.md  2026-05-15-organisational-failure-modes-structural-fragmentation.md  2026-05-17-systems-capability-debt-thesis-evidence-assessment.md  2026-05-19-human-ai-cognitive-divergence-risk.md  2026-06-13-friction-aligned-apprenticeship.md  _template.md
Research/: README.md  Research_Master.md  _template.md
config/: sources.yaml
docs-adr/: 0002-agent-skills-submodule.md  0004-autonomous-research-loop.md  0006-standardise-agent-instructions.md  0010-github-pages-static-site.md  0011-git-index-staging-in-cli-file-moves.md  0012-research-loop-safety-control-value-uplift.md  0013-research-item-frontmatter-schema-extension.md  0014-knowledge-synthesis-directory.md  0014-research-item-depends-on-picker-gating.md  0015-gemini-ai-theme-enrichment.md  0016-graph-visualization-approach.md  0017-search-matcher-and-playwright-ui-regression-tests.md  0018-unified-themes-field.md  README.md
(+3412 files in other folders)
